# AQI-Predictor

./: .env.example  .gitignore  Dockerfile  Instructions.txt  README.md  apprunner-config.json  architecture_diagram.md  ask_claude_bedrock.py  ask_claude_direct.py  ask_claude_opus.py  buildspec.yml  deploy_buildspec.yml  docker-compose.yml  implementation_plan.md  output.json  pdf_content.txt  pyproject.toml  render.yaml  requirements-deploy.txt  requirements.txt  response.json  test_buildspec.yml  vercel.json
.github/workflows/: feature_pipeline_cron.yml  infra_validation.yml  training_pipeline_cron.yml
config/: __init__.py  schemas.py  settings.py
data_pipeline/: __init__.py  backfill.py  historical.py  ingest.py  transformers.py
deployment/api/: __init__.py  dependencies.py  main.py  middleware.py
deployment/dashboard/: app.py
deployment/frontend/: index.html
deployment/streamlit_app/: app.py
deployment/web_app/: package-lock.json  package.json
docs/: documentation.tex
eda/: EDA_Analysis.ipynb  __init__.py  advanced_eda.py  run_eda.py
eda/reports/: aqi_percentiles.json  dataset_overview.json  eda_advanced_summary.json  eda_summary.json  granger_causality.json  hazardous_events_analysis.json  hypothesis_tests.json  outlier_analysis.json  stationarity_test.json  volatility_analysis.json
feature_pipeline/: __init__.py  register.py
tests/: test_api.py  test_data_pipeline.py  test_feature_pipeline.py  test_training_pipeline.py  test_validation.py
training_pipeline/: __init__.py  evaluation.py  explainability.py  registry.py  train.py
(+80 files in other folders)
