[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pearls-aqi-predictor"
version = "1.0.0"
description = "End-to-end AQI prediction system for Sargodha, Pakistan"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Pearls Engineering Team"},
]
keywords = ["aqi", "air-quality", "machine-learning", "forecasting", "lstm", "lightgbm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["config", "data_pipeline", "feature_pipeline", "training_pipeline", "deployment", "infrastructure"]
